--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: wheat;
+    background-color: rgba(246, 206, 132, 0.448);
     border-radius: 50px;
     padding: 25px;
 }
