--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,24 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+}
+
 #counter{
     display: flex;
-    /* border: 5px solid; */
-    font-family: ubuntu;
-    gap: 10px;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: rgba(246, 206, 132, 0.448);
+    /* border: 5px solid; */
+    font-family: ubuntu;
+    gap: 10px;
+    background-color: #fde1ae;
     border-radius: 50px;
     padding: 25px;
+    width: 248px;
+    transform: translateY(-37px);
 }
 
 button{
@@ -23,10 +33,19 @@ button{
     transition: 200ms;
 }
 
-.counter-btn{
+#counterLabel{
+    warp
+    
+    font-size: 38px;
+    font-weight: bold;
+    margin: 25px;
+}
+
+.counter-btns{
     display: flex;
     gap: 10px;
     padding: 10px;
+    margin: 40pxpx;
 }
 
 #resetBTN{
@@ -43,4 +62,54 @@ button{
     &:hover{
         background-color: #ccc;
     }
+}
+
+#myCheckbox:checked + #whenNum{
+    height: 310px;
+
+}
+
+#whenNum{
+    border-radius: 50px;
+    z-index: -1;
+    background-color: #fde1ae;
+    /* border: 5px solid black; */
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 298px;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    height: 170px;
+    transition: height ease 300ms;
+    /* height: checkboxRef.current?.checked ? '310px' : '0px' */
+}
+
+#whenNum{
+    margin-bottom: 15px;
+    font-size: 24px;
+    font-family: ubuntu;
+    font-weight: bold;
+}
+
+#unsupported-message{
+    display: none;
+    font-size: 24px;
+    font-family: ubuntu;
+    text-align: center;
+    margin: 35px;
+    width: 80%;
+    white-space: npwrap;
+
+}
+
+@media (max-width: 599px) {
+  #main-content { 
+    display: none;
+  }
+  #unsupported-message {
+    display: flex; 
+  }
 }
