--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,16 @@
 body{
+  /* border: 5px solid green; */
   background-color: beige;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 600px;
+}
+
+#App{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
 }
