--- a/src/App.css
+++ b/src/App.css
@@ -1,115 +1,146 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
 }
 
-#counter{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    /* border: 5px solid; */
-    font-family: ubuntu;
-    gap: 10px;
-    background-color: #fde1ae;
-    border-radius: 50px;
-    padding: 25px;
-    width: 248px;
-    transform: translateY(-37px);
+#counter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  /* border: 5px solid; */
+  font-family: ubuntu;
+  gap: 10px;
+  background-color: #fde1ae;
+  border-radius: 50px;
+  padding: 25px;
+  width: 248px;
+  transform: translateY(-37px);
 }
 
-button{
-    width: 110px;
-    height: 30px;
-    font-family: ubuntu;
-    font-weight: bold;
-    font-size: 16px;
-    border-radius: 25px;
-    border: 2px solid black;
-    cursor: pointer;
-    transition: 200ms;
+button {
+  width: 110px;
+  height: 30px;
+  font-family: ubuntu;
+  font-weight: bold;
+  font-size: 16px;
+  border-radius: 25px;
+  border: 2px solid black;
+  cursor: pointer;
+  transition: 200ms;
 }
 
-#counterLabel{
-    warp
-    
-    font-size: 38px;
-    font-weight: bold;
-    margin: 25px;
+#counterLabel {
+  warp
+
+  font-size: 38px;
+  font-weight: bold;
+  margin: 25px;
 }
 
-.counter-btns{
-    display: flex;
-    gap: 10px;
-    padding: 10px;
-    margin: 40pxpx;
+.counter-btns {
+  display: flex;
+  gap: 10px;
+  padding: 10px;
+  margin: 40pxpx;
 }
 
-#resetBTN{
-    background-color: red;
-    color: white;
-    font-size: 18px;
+#resetBTN {
+  background-color: red;
+  color: white;
+  font-size: 18px;
 
-    &:hover{
-        background-color: rgb(50, 50, 50);
-    }
+  &:hover {
+    background-color: rgb(50, 50, 50);
+  }
 }
 
-.btns{
-    &:hover{
-        background-color: #ccc;
-    }
+.btns {
+  &:hover {
+    background-color: #ccc;
+  }
 }
 
-#myCheckbox:checked + #whenNum{
-    height: 310px;
+#myCheckbox:checked+#whenNum {
+  height: 310px;
 
 }
 
-#whenNum{
-    border-radius: 50px;
-    z-index: -1;
-    background-color: #fde1ae;
-    /* border: 5px solid black; */
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 298px;
-    display: flex;
-    align-items: end;
-    justify-content: center;
-    height: 170px;
-    transition: height ease 300ms;
-    /* height: checkboxRef.current?.checked ? '310px' : '0px' */
+#whenNum {
+  border-radius: 50px;
+  z-index: -1;
+  background-color: #fde1ae;
+  /* border: 5px solid black; */
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 298px;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  height: 170px;
+  transition: height ease 300ms;
+  /* height: checkboxRef.current?.checked ? '310px' : '0px' */
 }
 
-#whenNum{
-    margin-bottom: 15px;
-    font-size: 24px;
-    font-family: ubuntu;
-    font-weight: bold;
+#whenNum {
+  margin-bottom: 15px;
+  font-size: 24px;
+  font-family: ubuntu;
+  font-weight: bold;
 }
 
-#unsupported-message{
-    display: none;
-    font-size: 24px;
-    font-family: ubuntu;
-    text-align: center;
-    margin: 35px;
-    width: 80%;
-    white-space: npwrap;
+#unsupported-message {
+  display: none;
+  font-size: 24px;
+  font-family: ubuntu;
+  text-align: center;
+  margin: 35px;
+  width: 80%;
+  white-space: npwrap;
 
 }
 
 @media (max-height: 600px) {
-  #main-content { 
+  #main-content {
     display: none;
   }
+
   #unsupported-message {
-    display: flex; 
+    display: flex;
+  }
+}
+
+/* Confetti CSS */
+.confetti {
+  /* Change color as needed */
+  position: absolute;
+  top: -10px;
+  /* Start above the viewport */
+  animation: confetti-fall 2s linear forwards;
+  /* Apply animation */
+}
+
+@keyframes confetti-fall {
+  0% {
+    transform: translateY(-100px) rotate(0deg);
+  }
+
+  1%{
+    opacity: 1;
+  }
+
+  80%{
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(100vh) rotate(720deg);
+    opacity: 0;
+    /* Fade out at the end */
   }
 }
