--- a/src/main.css
+++ b/src/main.css
@@ -1,16 +1,11 @@
-body{
-  /* border: 5px solid green; */
-  background-color: beige;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 600px;
-}
+body#App {
 
+}
+/* 
 #App{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     margin: 0;
-}
+} */
