--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     displey: flex;
     margin: 0;
 }
@@ -9,4 +9,4 @@ body {
     align-items: center;
     min-height: 100vh;
     margin: 0;
-} */
+} */ */
